update paper with actual Java benchmark results